--- a/src/main/webapp/WEB-INF/Pages/all-users.html
+++ b/src/main/webapp/WEB-INF/Pages/all-users.html
@@ -66,8 +66,14 @@
             <!-- Hidden input for userId -->
             <input type="hidden" th:name="'userId'" th:value="${user.id}"/>
             <td>
-                <input type="button" value="Update" th:onclick="'window.location.href = /updateUser?userId=' + ${user.id}"/>
-                <input type="button" value="Delete" th:onclick="'window.location.href = /deleteUser?userId=' + ${user.id}"/>
+                <form th:action="@{/updateUser}" method="get">
+                    <input type="hidden" th:name="'userId'" th:value="${user.id}"/>
+                    <input type="submit" value="Update">
+                </form>
+                <form th:action="@{/deleteUser}" method="post">
+                    <input type="hidden" th:name="'userId'" th:value="${user.id}"/>
+                    <input type="submit" value="Delete">
+                </form>
             </td>
         </tr>
     </th:block>
